# dotfiles

./: .dir-locals.el  .editorconfig  .envrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .shellcheckrc  .sops.yaml  AGENTS.md  Brewfile  Brewfile.lock.json  Makefile  NOTES.md  README.markdown  README.md  README.org  Rakefile  THANKS  alacritty.yml  aliases  antigenrc  asdf-plugins  asdf.plugins  bashrc  ctags  default.nix  devenv.nix  emacs-profiles.el  flake-module.nix  flake.nix  gitconfig  gitignore  gpg.just  ideavimrc  info.just  install.sh  justfile  main.tf  (+20 more)
.vectimus/: config.toml
SpaceVim.d/: init.toml
ack/: ackrc.symlink
apps/: home-switch.nix  nixos-switch.nix
arcanist/: completion.zsh
aws-okta/: completion.zsh
cargo/: config.toml
clojure/: deps.edn
config/: starship.toml
ctags/: aliases.zsh  ctags.exclude.symlink
darwin/: common.nix  patchbook.nix  repl  repl.nix
docker/: aliases.zsh
flake-module/: default.nix  mission-control.nix  sops.nix  windows.nix
flake-modules/: apps.nix  darwin.nix  default.nix  dev.nix  home-manager.nix  mission-control.nix  options.nix  overlays.nix  packages.nix
flake-parts/: apps.nix  default.nix  devshell.nix  home-manager.nix  nixos.nix  overlays.nix  packages.nix
fonts/: Makefile  urls.txt
functions/: _conda  c  exit
fzf/: fzf.zsh  install.sh  path.zsh
git/: aliases.zsh  forgit.zsh  git-clone.zsh  git-track  gitconfig.symlink
gnupg/: gpg-agent.conf  gpg.conf
tools/maskedmail/: README.md  pyproject.toml
tools/maskedmail/maskedmail/: cli.py
(+1254 files in other folders)
